force-app/main/default/objects/Vehicle_Customer__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Address of the Customer.</description>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>