force-app/main/default/objects/Vehicle_Customer__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>Name of the Customer.</description>
    <label>Customer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>