force-app/main/default/objects/Vehicle_Customer__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Customer uses email to communicate/receive information about vehicle related.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>