force-app/main/default/objects/Vehicle_Customer__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Customer uses phone to communicate with vehicle dealers.</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>